2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc: Set LC_ALL=C to avoid spurious test
	failures in non-English locale.

2014-04-22  Patrice Dumas  <pertusus@free.fr>

	* tp/texi2any.pl: unset OUTFILE when --output is given, even
	if it is a directory.
	* tp/Texinfo/Convert/Converter.pm: warn about output incompatible
	with splitting.

2014-04-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (@t{@@listoffloats}) [ifinfo]: do not output a
	real menu for Info, so readers can go forward with SPC as usual.
	Reported by Mohammad Akhlaghi, bug-texinfo 15 Apr 2014 18:03:41.

2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_target): Better handling
	of case when a newline appears within a reference specification.
	(info_parse_node): Skip newlines at start of specification.

2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (degrade_utf8): Replacements added for more
	characters spotted in documents.

2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (window_make_modeline): Subtract height of
	window from length of node when calculating percentage
	position in node so that it smoothly scales from 0% to 100%.
	
2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_get_labeled_reference)
	(info_menu_entry_by_label): Renamed.  Only look for menu items.
	
	* info/man.c (manpage_node_of_file_buffer): Set nodelen and nodestart
	field in returned NODE.
	(xrefs_of_manpage): If no references, return array with a single
	null entry instead of null. Set type fields to REFERENCE_XREF.
	* info/window.c: (window_make_modeline) If preprocess_nodes_p is
	set, display less information in status bar.
	* info/nodes.c (get_node_length): Function no longer static.
	Definition moved in file.
	
2014-04-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c, info/info-utils.h (info_menu_of_node)
	(info_xrefs_of_node, info_menu_items, info_xrefs)