@@ -1,5 +1,15 @@
 2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/session.c (ea_explicit_arg, ea_numeric_arg_sign)
+	(ea_numeric_arg): New variables.
+	(info_universal_argument, info_initialize_numeric_arg)
+	(info_numeric_arg_digit_loop, info_dispatch_on_key): Use new
+	variables if in echo area.
+	* echo-area.c (ea_delete, ea_rubout): Use ea_explicit_arg
+	instead of info_explicit_arg.
+
+2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/t/Init-test.inc: Set LC_ALL=C to avoid spurious test
 	failures in non-English locale.
 
